# X360-Games

./: .gitignore  README.md  X360-Games.json  X360-Games.json.bak  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: X360-Games.json
app/src/main/cpp/: CMakeLists.txt  gdf_parser.cpp  gdf_parser.h  god_hash_tables.cpp  god_hash_tables.h  hash_utils.cpp  hash_utils.h  iso2god_converter.cpp  iso2god_converter.h  iso2god_jni.cpp  xex_parser.cpp  xex_parser.h
app/src/main/java/com/x360games/archivedownloader/: MainActivity.kt
app/src/main/java/com/x360games/archivedownloader/cache/: CacheManager.kt
app/src/main/java/com/x360games/archivedownloader/data/: ArchiveMetadata.kt  DownloadProgressTracker.kt  DownloadState.kt  MultiPartDownloadProgress.kt  UserCredentials.kt  X360Collection.kt
app/src/main/java/com/x360games/archivedownloader/database/: AppDatabase.kt  DownloadDao.kt  DownloadEntity.kt  DownloadPartDao.kt  DownloadPartEntity.kt  SpeedHistoryDao.kt  SpeedHistoryEntity.kt
app/src/main/java/com/x360games/archivedownloader/navigation/: Navigation.kt
app/src/main/java/com/x360games/archivedownloader/network/: ArchiveRepository.kt  GitHubApiService.kt  InternetArchiveService.kt  MyrientService.kt  RetrofitClient.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  terms.xml  themes.xml
(+26 files in other folders)
